# asteroidsyncservice

./: .travis.yml  prepare.sh
tests/: CMakeLists.txt  asteroidsyncserviceTest.cpp  forecast.json  readjsonfile.cpp  readjsonfile.h
